maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:16: error: '=' expected but identifier found.
	def isDirectionFree(dir:Direction):=Boolean ={
                                          ^Escaper:23: error: illegal start of simple expression
	while(getY()!=0 && !estSurBiscuit()) {
^